# trash_detection

./: BAO_CAO_LAP_TRINH.md  README.md  architecture_and_protocol.md  implementation_plan.md
YOLO-Waste-Detection-main/YOLO-Waste-Detection-main/: LICENSE  README.md  requirements
code_test/esp32_actuator_servo_config/: esp32_actuator_servo_config.ino
code_test/esp32_line_sensor_readonly/: esp32_line_sensor_readonly.ino
code_test/esp32_line_sensors/: esp32_line_sensors.ino
code_test/esp32_sensor_readout/: esp32_sensor_readout.ino
code_test/esp32_servo_sg_test/: esp32_servo_sg_test.ino
model_best_pt_test/: README.md  app.py  requirements.txt
robot/MCU/esp32_actuator/: esp32_actuator.ino
robot/MCU/esp32_line_pid_test/: esp32_line_pid_test.ino
robot/Pi/: PI_ROS_CHECK.md  RUN_COMMANDS.md
robot/Pi/trash_sorting_ros/: package.xml  requirements.txt  setup.cfg  setup.py
robot/Pi/trash_sorting_ros/config/: pipeline.yaml
robot/Pi/trash_sorting_ros/docs/: ROS_ARCHITECTURE.md
robot/Pi/trash_sorting_ros/launch/: bringup.launch.py
robot/Pi/trash_sorting_ros/scripts/: start_full_pipeline.sh
robot/Pi/trash_sorting_ros/systemd/: trash-sorting.service
robot/Pi/trash_sorting_ros/trash_sorting_ros/: __init__.py  actuator_bridge.py  firebase_bridge.py  protocol.py  sensor_bridge.py  serial_node.py  trash_orchestrator.py  yolo_classifier.py
user_interface/: .firebaserc  pubspec.yaml
user_interface/.firebase/: hosting.YnVpbGRcd2Vi.cache
user_interface/lib/: main.dart
user_interface/test/: trash_bin_model_test.dart
user_interface/web/: index.html
(+23 files in other folders)
