<?xml version="1.0"?>
<package format="3">
  <name>trash_sorting_ros</name>
  <version>0.1.0</version>
  <description>Raspberry Pi ROS2 controller for the smart trash sorting robot.</description>
  <maintainer email="dev@example.com">trash_detection</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
